# git-mistake

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
git_mistake/: __init__.py  ai_helper.py  cli.py  context.py  detector.py  display.py
tests/: test_detector.py
