[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-mistake"
version = "1.0.1"
description = "AI-powered Git disaster recovery — describe your git problem, get exact fix commands"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["git", "recovery", "ai", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

# Zero dependencies — stdlib only (urllib, subprocess, json)
dependencies = []

[project.urls]
Homepage   = "https://github.com/thalha-a9/git-mistake"
Repository = "https://github.com/thalha-a9/git-mistake"
Issues     = "https://github.com/thalha-a9/git-mistake/issues"

[project.scripts]
git-mistake = "git_mistake.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["git_mistake*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
